- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.1080                                 -
---------------------------------------------
- 2021-02-24                                -
---------------------------------------------
.: WSM: Task: Adding invoice tracking dot (WSM-305)
.: WSM: Task: Add ready status in invoice track (WSM-306)

---------------------------------------------
- 2021-02-22                                -
---------------------------------------------
.: WSM: Task: Create price page (WSM-186)

---------------------------------------------
- 2021-02-15                                -
---------------------------------------------
.: WSM: Task: Toast maximum message when maximum number of uploading images is reached (WSM-161)

- v1.0.1070                                 -
---------------------------------------------
- 2021-02-03                                -
---------------------------------------------
.: WSM: BugFix: Timezone issue when requesting of today analysis (WSM-301)

---------------------------------------------
- 2021-02-02                                -
---------------------------------------------
.: WSM: BugFix: Update to support timezone (WSM-270)

---------------------------------------------
- 2021-01-31                                -
---------------------------------------------
.: WSM: BugFix: Update UI in item list (WSM-286)
.: WSM: Task: Able to add history invoice (WSM-297)
.: WSM: BugFix: Fixed upload container size and button in item type (WSM-286)
.: WSM: BugFix: Menu item type overlapped issue (WSM-299)
.: WSM: BugFix: Refresh invoices when invoice is paid (WSM-299)
.: WSM: BugFix: Fixed eta hour issue (WSM-269)

---------------------------------------------
- 2021-01-30                                -
---------------------------------------------
.: WSM: Task: Show analysis of delivery / pickup schedule by date time (WSM-269)